add a get /reports/upload-url
